# synth-os

./: .gitignore  justfile
qtile-configs/: .gitignore  config.py  justfile  xephyr
synth-backend/: Cargo.toml  README.md  justfile
synth-backend/htmx/: Cargo.toml
synth-backend/iced/: Cargo.toml  README.md
synth-backend/iced/src/: main.rs  synth_helpers.rs
synth-backend/leptos/: Cargo.toml  README.md  input.css  justfile  package-lock.json  package.json  tailwind.config.js
synth-backend/leptos/src/: app.rs  lib.rs  main.rs  synth_helpers.rs
synth-backend/leptos/src/app/screens/: mod.rs
synth-backend/leptos/src/app/screens/reverb/: mod.rs
synth-backend/leptos/style/: main.scss
synth-backend/src/: app.rs  main.rs  synth_helpers.rs
synth-backend/src/app/screens/: channel_editor.rs  mod.rs
synth-backend/src/app/screens/organ/: mod.rs
synth-backend/src/app/screens/sub_synth/: mod.rs
synth-backend/src/app/screens/wurlitzer/: mod.rs
synth-backend/style/: main.scss
synth-common/: Cargo.toml  README.md
synth-common/src/: lib.rs
synth-frontends/: README.md
synth-frontends/iced/: Cargo.toml  justfile
synth-frontends/iced/src/: main.rs
synth-frontends/iced/src/channel_editor/: mod.rs
synth-frontends/iced/src/helpers/: mod.rs  usize_less_then.rs
synth-frontends/iced/src/sidebar/: mod.rs
synth-frontends/synth-cli/: Cargo.toml
synth-frontends/synth-cli/src/: main.rs  tokens.rs  tokens.rs.2.bak  tokens.rs.bak
synth-lib/: README.md
