[package]
name = "synth-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.11.0"
actix-web-lab = "0.24.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
stepper-synth-backend = { package = "stepper-synth" , git = "https://github.com/calacuda/stepper-synth", branch = "feature", version = "0.1.0", default-features = false, optional = true, features = [ "midir", "tinyaudio", "fern" ] }
tokio = { version = "1.45.0", features = ["full"] }

