[package]
name = "synth-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["serde"] }
fuzzy-matcher = "0.3.7"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
tui-input = { version = "0.11.1", features = ["serde"] }
